log
Sat, Apr 19, 2025 12:06:41 AM: 
 hashmap.c | 72 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 63 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:74:32: error: implicit declaration of function 'mallcoc' [-Werror=implicit-function-declaration]
     HashMap *mapa = (HashMap *)mallcoc(sizeof(HashMap));
                                ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025 12:07:45 AM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:69:10: error: unused variable 'old_capacity' [-Werror=unused-variable]
     long old_capacity = map->capacity;
          ^~~~~~~~~~~~
hashmap.c:68:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
abefac6
